# harmony

./: .gitignore  Cargo.toml  README.md
config/: development.toml
src/: main.rs  settings.rs
src/api/: browse.rs  mod.rs  responses.rs  retrieve.rs  shelf.rs  system.rs  upload.rs  users.rs
src/api/subsonic/: system.rs  users.rs
src/auth/: auth.rs  middleware.rs  mod.rs  users.rs
src/db/: album.rs  album_artists.rs  artist.rs  book.rs  book_artists.rs  file.rs  mod.rs  playlist.rs  starred_albums.rs  starred_books.rs  starred_tracks.rs  track.rs  track_artists.rs  track_playlists.rs  user.rs
src/format/: epub.rs  flac.rs  mod.rs
