[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
config = { version = "0.15.19", features = ["toml"] }
sea-orm = { version = "2.0.0-rc", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.19.0"
