[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
chrono = "0.4.42"
config = { version = "0.15.19", features = ["toml"] }
hex = "0.4.3"
md5 = "0.8.0"
sea-orm = { version = "2.0.0-rc.27", features = ["entity-registry", "macros", "runtime-tokio-rustls", "schema-sync", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
