[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
base64 = "0.22.1"
chrono = "0.4.42"
config = { version = "0.15.19", features = ["toml"] }
hex = "0.4.3"
md5 = "0.8.0"
nom = "8.0.0"
rand = "0.9.2"
sea-orm = { version = "2.0.0-rc.27", features = ["entity-registry", "macros", "runtime-tokio-rustls", "schema-sync", "sqlx-sqlite", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
zip = { version = "7.1.0", default-features = false, features = ["deflate"] }
